fix(SelectInputField): this closes #6
This fixes unwanted white space on top border of SelectInputField components

Fix #6

--- a/src/components/SelectInputField/SelectInputField.styles.scss
+++ b/src/components/SelectInputField/SelectInputField.styles.scss
@@ -1,2 +1,7 @@
 #select-input-field {
+    fieldset {
+        legend {
+            display: none;
+        }
+    }
 }
